modified sass, added javascript and more components

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -25,6 +25,8 @@ html {
 
 body {
   box-sizing: border-box;
+  background-color: $color-grey-light-1;
+  overflow-x: hidden;
   @include respond(tab-port) {
     //width < 900 ?
     padding: 0;
