--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "components/button";
 @import "components/form";
 @import "components/newsletter";
+@import "components/slider";
 
 @import "layout/header";
 @import "layout/footer";
@@ -16,3 +17,6 @@
 @import "layout/navigation";
 
 @import "pages/home";
+@import "pages/about";
+@import "pages/testimonials";
+@import "pages/about-rules";
