--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,9 @@ html {
       font-size: 80%; } }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  background-color: #f7f7f7;
+  overflow-x: hidden; }
   @media (max-width: 56.25em) {
     body {
       padding: 0; } }
@@ -30,8 +32,12 @@ body {
   line-height: 1.8;
   color: #777777; }
 
+.heading-primary {
+  font-size: 3rem;
+  word-spacing: 0.8rem; }
+
 .heading-secondary {
-  font-size: 3.5rem;
+  font-size: 2.4rem;
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
@@ -54,6 +60,53 @@ body {
   font-size: 2rem;
   font-weight: 700;
   text-transform: uppercase; }
+
+.heading-highlight--primary {
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  color: #f7f7f7;
+  text-transform: uppercase;
+  letter-spacing: 0.8rem;
+  padding: 1.2rem 0.8rem;
+  border-radius: 3px;
+  box-shadow: 0.3rem 0.2rem 0.3rem rgba(0, 0, 0, 0.4); }
+
+.heading-highlight--secondary {
+  background-image: linear-gradient(to right, #ffb900, #ff7730);
+  color: #f7f7f7;
+  text-transform: uppercase;
+  letter-spacing: 0.8rem;
+  padding: 1.2rem 0.8rem;
+  border-radius: 3px;
+  box-shadow: 0.3rem 0.2rem 0.3rem rgba(0, 0, 0, 0.4); }
+
+.heading-highlight--tertiary {
+  background-image: linear-gradient(to right, #2998ff, #5643fa);
+  color: #f7f7f7;
+  text-transform: uppercase;
+  letter-spacing: 0.8rem;
+  padding: 1.2rem 0.8rem;
+  border-radius: 3px;
+  box-shadow: 0.3rem 0.2rem 0.3rem rgba(0, 0, 0, 0.4); }
+
+.about-race {
+  font-size: 1.8rem;
+  margin: 4.8rem 4.8rem 2.4rem 1.6rem;
+  line-height: 2; }
+  .about-race__time {
+    margin-bottom: 3.2rem; }
+    .about-race__time__hour {
+      margin-right: 1.6rem;
+      padding: 1.2rem 1.2rem;
+      background-image: linear-gradient(to right, #7ed56f, #28b485);
+      border-radius: 8px;
+      color: #f7f7f7;
+      box-shadow: 0.2rem 0.1rem 0.2rem rgba(0, 0, 0, 0.4); }
+  .about-race__description {
+    font-weight: 700;
+    margin-bottom: 1.6rem; }
+  .about-race__faded {
+    color: #999999;
+    font-size: 1.4rem; }
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
@@ -127,18 +180,22 @@ body {
   .secondary-btn::after {
     background-color: #f8f5f5; }
   .secondary-btn:hover, .secondary-btn:active {
-    color: #28b485;
-    outline: 1px solid #28b485; }
+    color: black;
+    background-color: #f8f5f5; }
 
-.form {
-  padding: 8rem;
-  background-image: linear-gradient(105deg, rgba(248, 245, 245, 0.9) 0%, rgba(248, 245, 245, 0.9) 100%, transparent 50%), url(../img/hero.jfif);
+.form-container {
+  padding: 4.8rem 6.4rem;
+  background-image: linear-gradient(105deg, rgba(248, 245, 245, 0.7) 0%, rgba(248, 245, 245, 0.7) 100%, transparent 50%), url(../img/hero.jfif);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
   position: relative; }
+
+.form {
+  width: 65%;
+  margin: 0 auto; }
   @media (max-width: 75em) {
     .form {
       background-image: linear-gradient(105deg, rgba(248, 245, 245, 0.9) 0%, rgba(248, 245, 245, 0.9) 65%, transparent 65%), url(../img/hero.jfif);
@@ -164,7 +221,7 @@ body {
     background-color: rgba(248, 245, 245, 0.5);
     border: none;
     border-bottom: 3px solid transparent;
-    width: 80%;
+    width: 100%;
     display: block;
     transition: all 0.3s; }
     .form__input:focus {
@@ -212,9 +269,72 @@ body {
   .form__small-radio-label {
     font-size: 1.4rem; }
 
+.slider {
+  max-width: 100rem;
+  height: 50rem;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden; }
+  .slider .slide {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 50rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 1s; }
+    .slider .slide > img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+  .slider__btn {
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    border: none;
+    background: rgba(85, 197, 122, 0.7);
+    font-family: inherit;
+    color: #f8f5f5;
+    border-radius: 50%;
+    height: 4.8rem;
+    width: 4.8rem;
+    font-size: 3.6rem;
+    cursor: pointer; }
+    .slider__btn--left {
+      left: 6%;
+      transform: translate(-50%, -40%); }
+    .slider__btn--right {
+      right: 6%;
+      transform: translate(50%, -55%); }
+  .slider .dots {
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex; }
+    .slider .dots__dot {
+      border: none;
+      background-color: #b9b9b9;
+      opacity: 0.7;
+      height: 1rem;
+      width: 1rem;
+      border-radius: 50%;
+      margin-right: 1.75rem;
+      cursor: pointer;
+      transition: all 0.5s; }
+      .slider .dots__dot:last-child {
+        margin: 0; }
+      .slider .dots__dot--active {
+        background-color: #888;
+        opacity: 1; }
+
 .header {
   padding-top: 3.2rem;
-  height: 95vh;
+  height: 100vh;
   background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../img/hero.jfif");
   background-size: cover;
   background-position: center;
@@ -223,7 +343,7 @@ body {
 .hero {
   position: absolute;
   top: 40%;
-  left: 25%;
+  left: 30%;
   transform: translateX(-50%); }
   .hero__text {
     font-size: 1.8rem;
@@ -232,6 +352,104 @@ body {
     font-size: 4.4rem;
     text-transform: uppercase;
     letter-spacing: 0.8rem; }
+  .hero__wave {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg); }
+    .hero__wave svg {
+      position: relative;
+      display: block;
+      width: calc(135% + 1.3px);
+      height: 96px;
+      transform: rotateY(180deg); }
+    .hero__wave .shape-fill {
+      fill: #f7f7f7; }
+
+.section--register {
+  padding: 12.8rem 3.2rem;
+  background-color: #37383d;
+  border-top: none;
+  border-bottom: 1px solid #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: transform 1s, opacity 1s; }
+  .section--register__title {
+    max-width: 80rem;
+    margin-bottom: 6rem; }
+  .section--register__header {
+    display: block;
+    font-size: 3.6rem;
+    font-weight: 600;
+    color: #f8f5f5;
+    margin: 0 auto; }
+  .section--register__btn {
+    display: inline-block;
+    background-color: #55c57a;
+    font-size: 2rem;
+    padding: 3.2rem 6.4rem;
+    font-family: inherit;
+    font-weight: 500;
+    border: none;
+    padding: 1.25rem 4.5rem;
+    border-radius: 10rem;
+    cursor: pointer;
+    transition: all 0.3s; }
+    .section--register__btn:hover {
+      background-color: #f7f7f7; }
+
+.footer {
+  padding: 9.6rem 3.2rem;
+  background-color: #333333; }
+  .footer__nav {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5rem; }
+  .footer__item {
+    margin-right: 4rem; }
+  .footer__link {
+    font-size: 1.6rem;
+    color: #f7f7f7;
+    text-decoration: none;
+    display: inline-block;
+    transition: all 0.4s; }
+    .footer__link:hover, .footer__link:active {
+      transform: scale(1.2);
+      color: #55c57a; }
+  .footer__logo {
+    height: 5rem;
+    display: block;
+    transform: rotate(180deg);
+    margin: 0 auto;
+    margin-bottom: 5rem; }
+  .footer__social {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .footer__social__list {
+      list-style: none;
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      .footer__social__list__item {
+        margin: 0 3.2rem;
+        font-size: 1.8rem; }
+      .footer__social__list__link {
+        text-decoration: none;
+        color: #f7f7f7;
+        transition: all 0.4s;
+        display: inline-block; }
+        .footer__social__list__link:hover, .footer__social__list__link:active {
+          transform: scale(1.2);
+          color: #55c57a; }
 
 .navigation {
   height: 6rem;
@@ -259,6 +477,15 @@ body {
     padding: 1.6rem 5.2rem;
     border-radius: 50px;
     font-weight: bold; }
+  .navigation__img-box {
+    height: 6.4rem;
+    width: 6.4rem; }
+    .navigation__img-box .main-logo {
+      display: inline-block;
+      height: 6.4rem;
+      width: 9.6rem;
+      margin-left: 2.4rem;
+      transform: rotate(180deg); }
   .navigation__link:link.main-link:hover, .navigation__link:visited.main-link:active {
     color: #333333;
     background-color: #f7f7f7; }
@@ -279,10 +506,20 @@ body {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      flex: 1; }
+      flex: 1;
+      gap: 8rem; }
     .section-about .container-about__description {
-      font-size: 1.8rem;
       padding: 6.4rem; }
+      .section-about .container-about__description__paragraph {
+        font-size: 1.8rem;
+        line-height: 1.8; }
+
+.section-about-race {
+  padding: 8rem 6.4rem;
+  display: flex;
+  gap: 8rem;
+  justify-content: space-between;
+  align-items: center; }
 
 .section-form {
   padding: 15rem;
@@ -290,3 +527,200 @@ body {
   @media (max-width: 56.25em) {
     .section-form {
       padding: 10rem 0; } }
+
+.about-rules__heading {
+  margin-left: 4.8rem; }
+
+.about-rules__img {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16rem; }
+  .about-rules__img__one {
+    align-self: flex-start; }
+  .about-rules__img__two {
+    align-self: flex-end; }
+
+.about-rules__text {
+  font-size: 1.6rem;
+  line-height: 1.4; }
+  .about-rules__text__rules {
+    padding: 2.4rem; }
+    .about-rules__text__rules__group {
+      margin: 2.4rem;
+      padding: 1.2rem;
+      border: 2px solid #55c57a;
+      border-radius: 8px; }
+      .about-rules__text__rules__group__heading {
+        margin-bottom: 1.2rem;
+        font-size: 2.4rem;
+        background: linear-gradient(to right, #7ed56f, #28b485);
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+        text-transform: uppercase;
+        letter-spacing: 0.8rem;
+        display: inline-block;
+        border-bottom: 2px solid #55c57a; }
+      .about-rules__text__rules__group__rule {
+        margin: 1.2rem 0.8rem;
+        font-weight: 700;
+        padding: 0.8rem; }
+    .about-rules__text__rules button {
+      transform: translateX(100%); }
+
+.section-testimonials {
+  height: 100vh;
+  margin: 4.8rem 0; }
+  .section-testimonials__title {
+    max-width: 80rem;
+    margin: 0 auto 4.8rem auto; }
+  .section-testimonials .section__description {
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #f7f7f7;
+    display: inline-block; }
+  .section-testimonials .section__header {
+    font-size: 4rem;
+    line-height: 1.3;
+    font-weight: 500; }
+  .section-testimonials .testimonial {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    width: 75%;
+    margin: 0 auto;
+    box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+    background-color: rgba(248, 245, 245, 0.6);
+    border-radius: 3px;
+    padding: 6rem;
+    padding-left: 9rem;
+    font-size: 1.6rem; }
+    @media (max-width: 56.25em) {
+      .section-testimonials .testimonial {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem; } }
+    .section-testimonials .testimonial__shape {
+      width: 15rem;
+      height: 15rem;
+      -webkit-shape-outside: circle(50% at 50% 50%);
+      shape-outside: circle(50% at 50% 50%);
+      -webkit-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+      transform: translateX(-3rem);
+      position: relative; }
+    .section-testimonials .testimonial__image {
+      height: 100%;
+      backface-visibility: hidden;
+      overflow: hidden;
+      transition: all 0.5s; }
+    .section-testimonials .testimonial__caption {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #f8f5f5;
+      text-transform: uppercase;
+      font-size: 1.7rem;
+      text-align: center;
+      opacity: 0;
+      transition: all 0.5s;
+      backface-visibility: hidden; }
+    .section-testimonials .testimonial:hover .section-testimonials .testimonial__caption {
+      opacity: 1;
+      transform: translate(-30%, -50%); }
+    .section-testimonials .testimonial:hover .section-testimonials .testimonial__image {
+      transform: translateX(-2rem) scale(1);
+      filter: blur(3px) brightness(80%); }
+
+.about-rules {
+  height: 100vh;
+  margin: 9.6rem 4.8rem;
+  position: relative; }
+  .about-rules__title {
+    position: relative;
+    left: 21.5%; }
+  .about-rules__description {
+    display: inline-block;
+    font-size: 2.4rem; }
+  .about-rules__header {
+    font-size: 1.8rem;
+    margin-top: 0.8rem; }
+  .about-rules .rules {
+    max-width: 100rem;
+    margin: 9.6rem auto 0 auto;
+    background-color: #f7f7f7; }
+    .about-rules .rules__tab {
+      margin-right: 2.4rem;
+      transform: translateY(-50%); }
+      .about-rules .rules__tab-container {
+        display: flex;
+        justify-content: center;
+        background-color: #f8f5f5;
+        border-radius: 3.2rem 3.2rem 0 0; }
+      .about-rules .rules__tab span {
+        margin-right: 1.2rem;
+        font-weight: 600;
+        display: inline-block; }
+      .about-rules .rules__tab--1 {
+        background-color: #ffb900; }
+        .about-rules .rules__tab--1:hover {
+          background-color: #ff7730; }
+      .about-rules .rules__tab--2 {
+        background-color: #7ed56f; }
+        .about-rules .rules__tab--2:hover {
+          background-color: #28b485; }
+      .about-rules .rules__tab--3 {
+        background-color: #2998ff; }
+        .about-rules .rules__tab--3:hover {
+          background-color: #5643fa; }
+      .about-rules .rules__tab--active {
+        transform: translateY(-66%); }
+    .about-rules .rules__content {
+      display: none; }
+      .about-rules .rules__content--active {
+        background-color: #f8f5f5;
+        border-radius: 0 0 3.2rem 3.2rem;
+        padding: 0 3.2rem 4.8rem 3.2rem;
+        display: grid;
+        grid-template-columns: 6.4rem 1fr;
+        column-gap: 3.2rem;
+        row-gap: 0.8rem; }
+      .about-rules .rules__content p {
+        grid-column: 2;
+        font-size: 1.8rem;
+        font-weight: 600;
+        line-height: 1.6;
+        padding: 0.8rem; }
+    .about-rules .rules__header {
+      display: inline-block;
+      font-size: 2.4rem;
+      font-weight: 600;
+      align-self: center;
+      margin-bottom: 3.2rem; }
+    .about-rules .rules__icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 6.4rem;
+      width: 6.4rem;
+      border-radius: 50%; }
+      .about-rules .rules__icon svg {
+        height: 2.4rem;
+        width: 2.4rem; }
+      .about-rules .rules__icon--1 {
+        background-color: rgba(255, 185, 0, 0.7); }
+        .about-rules .rules__icon--1 svg {
+          fill: #ff7730; }
+      .about-rules .rules__icon--2 {
+        background-color: rgba(85, 197, 122, 0.7); }
+        .about-rules .rules__icon--2 svg {
+          fill: #28b485; }
+      .about-rules .rules__icon--3 {
+        background-color: rgba(41, 152, 255, 0.7); }
+        .about-rules .rules__icon--3 svg {
+          fill: #5643fa; }
