--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -49,7 +49,7 @@
 
   &:hover,
   &:active {
-    color: $color-primary-dark;
-    outline: 1px solid $color-primary-dark;
+    color: $color-black;
+    background-color: $color-white;
   }
 }
