--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,9 +1,9 @@
-.form {
-  padding: 8rem;
+.form-container {
+  padding: 4.8rem 6.4rem;
   background-image: linear-gradient(
       105deg,
-      rgba($color-white, 0.9) 0%,
-      rgba($color-white, 0.9) 100%,
+      rgba($color-white, 0.7) 0%,
+      rgba($color-white, 0.7) 100%,
       transparent 50%
     ),
     url(../img/hero.jfif);
@@ -14,7 +14,11 @@
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
   position: relative;
+}
 
+.form {
+  width: 65%;
+  margin: 0 auto;
   @include respond(tab-land) {
     background-image: linear-gradient(
         105deg,
@@ -57,7 +61,7 @@
     background-color: rgba($color-white, $alpha: 0.5);
     border: none;
     border-bottom: 3px solid transparent;
-    width: 80%;
+    width: 100%;
     display: block;
     transition: all 0.3s;
 
