--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,12 +1,13 @@
 // COLORS
-$color-primary: rgb(85, 197, 122);
-$color-primary-light: rgb(126, 213, 111);
-$color-primary-dark: rgb(40, 180, 133);
+$color-primary: #ff1418;
+$color-primary-light: #ff7274;
+$color-primary-dark: #990c0e;
+$color-primary-dark-2: #330405;
 
-$color-secondary-light: rgb(255, 185, 0);
+$color-secondary-light: #ffb900;
 $color-secondary-dark: rgb(255, 119, 48);
 
-$color-tertiary-light: rgb(41, 152, 255);
+$color-tertiary-light: #2998ff;
 $color-tertiary-dark: rgb(86, 67, 250);
 
 $color-grey-light-1: rgb(247, 247, 247);
