--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,12 +8,13 @@
 
 @import "components/button";
 @import "components/form";
-@import "components/newsletter";
 @import "components/slider";
+@import "components/switcher";
+@import "components/image-carousel";
+@import "components/faq-collapse";
 
 @import "layout/header";
 @import "layout/footer";
-@import "layout/grid";
 @import "layout/navigation";
 
 @import "pages/home";
