--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -2,8 +2,8 @@
   padding: 4.8rem 6.4rem;
   background-image: linear-gradient(
       105deg,
-      rgba($color-white, 0.7) 0%,
-      rgba($color-white, 0.7) 100%,
+      rgba($color-white, 0.8) 0%,
+      rgba($color-white, 0.8) 100%,
       transparent 50%
     ),
     url(../img/hero.jfif);
@@ -18,6 +18,10 @@
 
 .form {
   width: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
   @include respond(tab-land) {
     background-image: linear-gradient(
@@ -49,9 +53,17 @@
 
   @include respond(tab-port) {
   }
-  &__group:not(:last-child) {
-    margin-bottom: 1rem;
+  &__group {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    &:not(:last-child) {
+      margin-bottom: 1rem;
+    }
   }
+
   &__input {
     font-size: 1.5rem;
     font-family: inherit;
@@ -61,7 +73,7 @@
     background-color: rgba($color-white, $alpha: 0.5);
     border: none;
     border-bottom: 3px solid transparent;
-    width: 100%;
+    width: 80%;
     display: block;
     transition: all 0.3s;
 
@@ -86,6 +98,7 @@
     margin-bottom: 1.4rem;
     display: block;
     transition: all 0.3s;
+    align-self: flex-start;
   }
   &__input:placeholder-shown + &__label {
     opacity: 0;
