--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,57 +1,174 @@
 .navigation {
-  height: 6rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: transparent;
+  &__checkbox {
+    display: none;
+  }
+  &__button {
+    background-color: $color-white;
+    height: 7rem;
+    width: 7rem;
+    position: fixed;
+    top: 6rem;
+    right: 6rem;
+    border-radius: 50%;
+    z-index: 2000;
+    box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
+    text-align: center;
+    cursor: pointer;
 
+    @include respond(tab-port) {
+      top: 3rem;
+      right: 3rem;
+    }
+    @include respond(tab-port) {
+      top: 4rem;
+      right: 4rem;
+    }
+  }
+  &__background {
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    position: fixed;
+    top: 6.5rem;
+    right: 6.5rem;
+    background-image: radial-gradient(
+      $color-primary-dark,
+      $color-primary-dark-2
+    );
+    z-index: 1000;
+    transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+
+    @include respond(phone) {
+      top: 3.5rem;
+      right: 3.5rem;
+    }
+    @include respond(tab-port) {
+      top: 4.5rem;
+      right: 4.5rem;
+    }
+
+    // transform: scale(80);
+  }
+  &__nav {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1500;
+
+    opacity: 0;
+    width: 0;
+    transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
   &__list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     list-style: none;
-    gap: 6.4rem;
-    padding: 2.4rem;
+    text-align: center;
+    width: 80%;
+    height: 80%;
   }
-
-  &__link:link,
-  &__link:visited {
-    text-decoration: none;
-    color: $color-primary;
-    font-size: 1.8rem;
-    transition: all 0.3s ease-in;
+  &__item {
+    margin: 1.2rem;
   }
+  &__link {
+    &:link,
+    &:visited {
+      display: none;
+      font-size: 2rem;
+      letter-spacing: 0.6rem;
+      font-weight: 300;
+      padding: 2.4rem 4.8rem;
+      color: $color-white;
+      text-decoration: none;
+      text-transform: uppercase;
+      background-image: linear-gradient(
+        120deg,
+        transparent 0%,
+        transparent 50%,
+        $color-grey-dark-3 50%
+      );
+      background-size: 230%;
+      transition: all 0.4s;
 
-  &__link:hover,
-  &__link:active {
-    color: $color-grey-light-1;
-  }
-  &__link:link.main-link,
-  &__link:visited.main-link {
-    color: $color-grey-light-1;
-    background-color: $color-primary;
-    padding: 1.6rem 5.2rem;
-    border-radius: 50px;
-    font-weight: bold;
-  }
+      span {
+        margin-right: 1.5rem;
+        display: inline-block;
+      }
+    }
 
-  &__img-box {
-    height: 6.4rem;
-    width: 6.4rem;
-
-    & .main-logo {
-      display: inline-block;
-      height: 6.4rem;
-      width: 9.6rem;
-      margin-left: 2.4rem;
-
-      transform: rotate(180deg);
+    &:hover,
+    &:active {
+      background-position: 100%;
+      color: $color-primary;
+      transform: translateX(1rem);
     }
   }
 
-  &__link:link.main-link:hover,
-  &__link:visited.main-link:active {
-    color: $color-grey-dark-3;
-    background-color: $color-grey-light-1;
+  // Functionality
+
+  &__checkbox:checked ~ &__background {
+    transform: scale(80);
+  }
+  &__checkbox:checked ~ &__nav {
+    opacity: 1;
+    width: 100%;
+
+    .navigation__link:visited,
+    .navigation__link:link {
+      display: inline-block;
+    }
+  }
+
+  //   ICON
+  &__icon {
+    position: relative;
+    margin-top: 3.5rem;
+
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      background-color: $color-grey-dark-3;
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all 0.2s;
+    }
+
+    &::before {
+      top: -0.8rem;
+    }
+    &::after {
+      top: 0.8rem;
+    }
+  }
+
+  &__button:hover &__icon::before {
+    top: -1rem;
+  }
+  &__button:hover &__icon::after {
+    top: 1rem;
+  }
+
+  &__checkbox:checked + &__button &__icon {
+    background-color: transparent;
+  }
+  &__checkbox:checked + &__button &__icon::before {
+    top: 0;
+    transform: rotate(135deg);
+  }
+  &__checkbox:checked + &__button &__icon::after {
+    top: 0;
+    transform: rotate(-135deg);
   }
 }
