--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -3,6 +3,7 @@
     margin-left: 4.8rem;
   }
   &__img {
+    transform: rotate(180deg);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
