--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -18,6 +18,12 @@
       gap: 8rem;
     }
 
+    &__img {
+      & img {
+        height: 40rem;
+        transform: rotate(90deg);
+      }
+    }
     &__description {
       padding: 6.4rem;
 
@@ -47,5 +53,30 @@
 
   @include respond(tab-port) {
     padding: 10rem 0;
+  }
+}
+
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+
+  .heading-featured {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    letter-spacing: 0.75px;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 2.4rem;
+    color: #888;
+  }
+
+  .featured {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .featured img {
+    height: 3.2rem;
+    filter: brightness(0);
+    opacity: 50%;
   }
 }
